--- a/view/package.json
+++ b/view/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "classnames": "^2.2.6",
     "dayjs": "^1.8.26",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -40,5 +41,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://us-central1-swe-utd.cloudfunctions.net/api"
+  "proxy": "https://us-central1-swe-utd.cloudfunctions.net/api",
+  "devDependencies": {
+    "react-social-icons": "^4.1.0"
+  }
 }
