--- a/view/package.json
+++ b/view/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
@@ -41,8 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://us-central1-swe-utd.cloudfunctions.net/api",
-  "devDependencies": {
-    "react-social-icons": "^4.1.0"
-  }
+  "proxy": "https://us-central1-swe-utd.cloudfunctions.net/api"
 }
