--- a/view/package.json
+++ b/view/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "view",
+  "homepage": "https://SWEUTD.github.io/SWEUTD-Website",
+  "name": "sweutd-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,6 +26,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,5 +48,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://us-central1-swe-utd.cloudfunctions.net/api"
+  "proxy": "https://us-central1-swe-utd.cloudfunctions.net/api",
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  }
 }
