--- a/view/package.json
+++ b/view/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SWEUTD.github.io/SWEUTD-Website",
+  "homepage": "https://SWEUTD.github.io/website",
   "name": "sweutd-website",
   "version": "0.1.0",
   "private": true,
@@ -14,16 +14,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "array.prototype.flat": "^1.2.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.14.0",
     "dayjs": "^1.8.26",
+    "jquery": "^3.5.1",
+    "moment": "^2.22.2",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
+    "react": "^16.8.0",
+    "react-big-calendar": "^0.20.2",
     "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.6.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react_google_calendar": "^2.2.4444",
+    "sass": "^1.3.0",
+    "typescript": "^3.2.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -48,7 +56,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://us-central1-swe-utd.cloudfunctions.net/api",
+  "proxy": "https://us-central1-swe-utd-portal.cloudfunctions.net/api",
   "devDependencies": {
     "gh-pages": "^3.0.0"
   }
