--- a/functions/package.json
+++ b/functions/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "busboy": "^0.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^7.13.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "nodemailer": "^6.4.8"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
