--- a/view/package.json
+++ b/view/package.json
@@ -23,15 +23,17 @@
     "jquery": "^3.5.1",
     "moment": "^2.22.2",
     "node-sass": "^4.14.1",
-    "react": "^16.8.0",
+    "react": "^16.13.1",
     "react-big-calendar": "^0.20.2",
     "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react_google_calendar": "^2.2.4444",
+    "redux": "^4.0.5",
     "sass": "^1.3.0",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.1",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "predeploy": "npm run build",
