--- a/functions/package.json
+++ b/functions/package.json
@@ -9,15 +9,19 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.1.1",
+    "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.13.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.3.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.8"
   },
   "devDependencies": {
