--- a/view/package.json
+++ b/view/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.14.0",
     "dayjs": "^1.8.26",
     "jquery": "^3.5.1",
+    "jsonp": "^0.2.1",
     "moment": "^2.22.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
