--- a/view/package.json
+++ b/view/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
     "dayjs": "^1.8.26",
+    "firebase": "^7.23.0",
     "jquery": "^3.5.1",
     "jsonp": "^0.2.1",
     "moment": "^2.22.2",
