cd into frontend

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,8 +16,9 @@ jobs:
 
       - name: Build
         run: |
+          cd view/
           npm install
-          npm run-script build
+          npm run build
         env:
           REACT_APP_APIKEY: ${{ secrets.REACT_APP_APIKEY }}
 
