--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -27,4 +27,5 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: build
+          FOLDER: view/build
+          CLEAN: true
