--- a/view/package.json
+++ b/view/package.json
@@ -32,6 +32,7 @@
     "react-player": "^2.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-responsive": "8.1.0",
     "react_google_calendar": "^2.2.4444",
     "redux": "^4.0.5",
     "sass": "^1.3.0",
