--- a/view/package.json
+++ b/view/package.json
@@ -38,6 +38,7 @@
     "react_google_calendar": "^2.2.4444",
     "redux": "^4.0.5",
     "sass": "^1.3.0",
+    "shards-react": "^1.0.3",
     "typescript": "^3.2.1"
   },
   "scripts": {
