--- a/view/package.json
+++ b/view/package.json
@@ -46,6 +46,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
+    "build-win": "set CI=false&&react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
