--- a/view/package.json
+++ b/view/package.json
@@ -25,7 +25,6 @@
     "jquery": "^3.5.1",
     "jsonp": "^0.2.1",
     "moment": "^2.22.2",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react_google_calendar": "^2.2.4444",
     "react-big-calendar": "^0.20.2",
@@ -38,7 +37,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "sass": "^1.3.0",
+    "sass": "^1.48.0",
+    "sass-loader": "^12.4.0",
     "typescript": "^3.2.1"
   },
   "scripts": {
