--- a/view/package.json
+++ b/view/package.json
@@ -68,5 +68,8 @@
   "proxy": "https://us-central1-swe-utd-portal.cloudfunctions.net/api",
   "devDependencies": {
     "gh-pages": "^3.0.0"
+  },
+  "resolutions": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
