updates to SWE stars page

--- a/view/package.json
+++ b/view/package.json
@@ -11,12 +11,13 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
+    "@mui/material": "^5.10.11",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
     "array.prototype.flat": "^1.2.3",
     "axios": "^0.24.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.2",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "date-fns": "^2.14.0",
@@ -28,7 +29,7 @@
     "react": "^16.13.1",
     "react_google_calendar": "^2.2.3",
     "react-big-calendar": "^0.20.2",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.6.6",
     "react-collapsible": "^2.8.1",
     "react-dom": "^16.13.1",
     "react-faq-component": "^1.2.2",
